Copyright (c) 2004-2007 The Trustees of Indiana University and Indiana
                        University Research and Technology
                        Corporation.  All rights reserved.
Copyright (c) 2004-2006 The University of Tennessee and The University
                        of Tennessee Research Foundation.  All rights
                        reserved.
Copyright (c) 2004-2006 High Performance Computing Center Stuttgart, 
                        University of Stuttgart.  All rights reserved.
Copyright (c) 2004-2006 The Regents of the University of California.
                        All rights reserved.
Copyright (c) 2006-2007 Cisco Systems, Inc.  All rights reserved.
Copyright (c) 2006      Voltaire, Inc. All rights reserved.
Copyright (c) 2006      Sun Microsystems, Inc.  All rights reserved.
                        Use is subject to license terms.
Copyright (c) 2006-2007 Los Alamos National Security, LLC.  All rights
                        reserved.
$COPYRIGHT$

Additional copyrights may follow

$HEADER$

===========================================================================

This file contains the main features as well as overviews of specific
bug fixes (and other actions) for each version of Open MPI since
version 1.0.

Trunk (not on release branches yet)
-----------------------------------

- Release tarballs now use Autoconf 2.61 and Automake 1.10.
  --> Expected: 1.3
- Addition of a finer symbols export control via the visibiliy feature
  offered by some compilers.
  --> Expected: 1.3
- Addition of "dr" (data reliability) PML.
  --> Expected: 1.3
- Added threaded progress for the openib BTL.
  --> Expected: ?1.3?
- Added Microsoft Windows support.  See README.WINDOWS file for
  details.
  --> Expected: ???
- Fixed issue with pthread detection when compilers are not all
  from the same vendor.  Thanks to Ake Sandgren for the bug
  report.
  --> Expected 1.2.x
- Portals MTL
  --> Expected 1.2.x