@@ -4,7 +4,7 @@ Copyright (c) 2004-2007 The Trustees of Indiana University and Indiana
 Copyright (c) 2004-2006 The University of Tennessee and The University
                         of Tennessee Research Foundation.  All rights
                         reserved.
-Copyright (c) 2004-2006 High Performance Computing Center Stuttgart, 
+Copyright (c) 2004-2007 High Performance Computing Center Stuttgart, 
                         University of Stuttgart.  All rights reserved.
 Copyright (c) 2004-2006 The Regents of the University of California.
                         All rights reserved.
@@ -29,6 +29,8 @@ version 1.0.
 Trunk (not on release branches yet)
 -----------------------------------
 
+- Fix problem with optional Fortran types to be correctly initialized.
+  --> Expected ?1.2.x?
 - Release tarballs now use Autoconf 2.61 and Automake 1.10.
   --> Expected: 1.3
 - Addition of a finer symbols export control via the visibiliy feature
